# nullamp

./: .gitignore  Cargo.toml  LICENSE  README.md  Scripts.toml
.github/workflows/: ci.yml  release.yml
crates/nullamp-app/: Cargo.toml
crates/nullamp-app/src/: app.rs  icons.rs  main.rs  message.rs  theme.rs
crates/nullamp-app/src/views/: context_menu.rs  eq_canvas.rs  equalizer.rs  library.rs  mod.rs  player_bar.rs  queue.rs  scan_modal.rs  settings.rs  status_bar.rs  voice.rs
crates/nullamp-audio/: Cargo.toml
crates/nullamp-audio/src/: capture.rs  eq.rs  lib.rs  player.rs
crates/nullamp-core/: Cargo.toml
crates/nullamp-core/src/: db.rs  error.rs  i18n.rs  indexer.rs  intent.rs  lib.rs  models.rs  settings.rs  whisper.rs
