[package]
name = "nullamp-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nullamp"
path = "src/main.rs"

[dependencies]
nullamp-core = { path = "../nullamp-core" }
nullamp-audio = { path = "../nullamp-audio" }
iced = { version = "0.13", features = ["tokio", "canvas"] }
tokio = { version = "1", features = ["rt", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
futures = "0.3"
rfd = "0.15"
log = "0.4"
env_logger = "0.11"
iced_fonts = { version = "0.2.1", features = ["bootstrap"] }
